fix(fechas): fix hover behaviour on mobile devices

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -430,6 +430,10 @@ main.fechas section.proximas > div {
   width: 100%;
   max-width: 76%;
 }
+main.fechas section.proximas > div > p {
+  color: white;
+  text-align: center;
+}
 main.fechas section.proximas article {
   color: white;
   text-align: center;
